# cppPluralCourse

./: CMakeLists.txt  Dockerfile  Makefile  buildEntrypoint.sh  docker-compose.yml  foo.cpp  foo.h  log  main.cpp
